--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan F. Bollig at 2013-04-23 05:14:25 -0500 
+%% Created for Evan F. Bollig at 2013-04-29 02:20:08 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Neves2009,
+	Abstract = {An hybrid technique is used for the solutions of static and time-dependent problems. The idea is to combine the radial basis function (RBF) collocation method and the pseudospectal (PS) method getting to the RBF-PS method. The approach presented in this paper includes a shape parameter optimization and produces highly accurate results. Different examples of the procedure are presented and different radial basis functions are used. One and two-dimensional problems are considered with various boundary and initial conditions. We consider generic problems, but also results on beams and plates. The displacement and the stress analysis are conducted for static and transient dynamic situations. Results obtained are in good agreement with exact solutions or references considered.},
+	Author = {A M A Neves and C M C Roque and A J M Ferreira and C M M Soares and R M N Jorge},
+	Date-Added = {2013-04-29 07:19:57 +0000},
+	Date-Modified = {2013-04-29 07:20:05 +0000},
+	Journal = {Journal of Physics: Conference Series},
+	Number = {1},
+	Pages = {012053},
+	Title = {Solving time-dependent problems by an RBF-PS method with an optimal shape parameter},
+	Url = {http://stacks.iop.org/1742-6596/181/i=1/a=012053},
+	Volume = {181},
+	Year = {2009},
+	Bdsk-Url-1 = {http://stacks.iop.org/1742-6596/181/i=1/a=012053}}
 
 @article{FasshauerZhang2007,
 	Author = {Fasshauer, Gregory E. and Zhang, Jack G.},
