--- a/latex/rbffd_methods_content/rbf_table.tex
+++ b/latex/rbffd_methods_content/rbf_table.tex
@@ -3,7 +3,7 @@
 \begin{table}[t]
    \centering
    \begin{tabular}{L | C | c |C| } % Column formatting, @{} suppresses leading/trailing space
-   \rbf{Name}{Abbrev.}{Formula}{Order (p)} \\
+   \rbf{Name}{Abbrev.}{Formula}{Order ($m$)} \\
    \hline\hline
    \rbf{Multiquadric}{MQ}{$\sqrt{1+(\varepsilon r)^2}$}{1} \\
    \rbf{Inverse Multiquadric}{IMQ}{$\frac{1}{\sqrt{1+(\varepsilon r)^2}}$}{0} \\
