--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -112,8 +112,7 @@ u(x) = \sum_{i=1}^N \phi_j(x) c_j
 $$
 As in the problem of RBF scattered data interpolation, $ \vc = \{c_j\} $ is the unknown coefficient vector. 
 Under the assumption that $\mathcal{L}$ is a linear operator, one can collocate the differential equation. Alternatively, individual derivative operators can be expressed as linear combinations of the unknowns $u_j$ (leading to the RBF-FD methods). 
-In all cases, a linear system of equations arises, with different degrees of sparsity, dependent on the chosen basis functions and how the various constraints are enforced.  While we restrict the $\phi_j(x)$ to RBFs or various operators applied to the RBFs, we note that spectral methods, finite-element or spectral-element methods can be formulated in a similar way with different choices of basis functions.  Of course, $u$ can be a vector of unknown variables ($\vc$ then becomes a matrix). %In what follows, we refer to the matrix to invert as $A$.
-
+In all cases, a linear system of equations arises, with different degrees of sparsity, dependent on the chosen basis functions and how the various constraints are enforced.  While we restrict the $\phi_j(x)$ to RBFs or various operators applied to the RBFs, we note that spectral methods, finite-element or spectral-element methods can be formulated in a similar way with different choices of basis functions.  Of course, $u$ can be a vector of unknown variables ($\vc$ then becomes a matrix). 
 
 In Table~\ref{tbl:rbfcolloctypes} we classify references according to their choice of collocation method and RBF 
 interpolation type. 
@@ -181,6 +180,7 @@ Global RBF methods result in full matrices \cite{Fasshauer2007}. The global coll
 Hon et al. \cite{Hon1999} employed Kansa's method to solve shallow water equations for Typhoon simulation.
 In \cite{FlyerWright09}, Flyer and Wright employed RBF-PS (Kansa method) for the solution of shallow water equations on a sphere. Their 
 results show that RBFs allow for longer time steps with spectral accuracy. The survey \cite{FlyerFornberg11} by Flyer and Fornberg showcases RBF-PS (Kansa) out-performing some of the of the best available methods in geosciences, namely: Finite Volume, Spectral Elements, Double Fourier, and Spherical Harmonics. When applied to problems such as transport on the sphere \cite{FlyerWright07}, shallow water equations \cite{FlyerWright09}, and 3D mantle convection\cite{WrightFlyerYuen10}, RBF-PS consistently required fewer time steps, and a fraction of the nodes for similar accuracy \cite{FlyerFornberg11}. 
+%TODO: add \cite{Neves2009}
 
 %
 %In the survey on RBF collocation presented by Larsson and Fornberg \cite{Larsson2003}, it was found that performance of the 
@@ -306,34 +306,31 @@ interpolation} with Radial Basis Functions.
 
 \subsection{RBF Scattered Data Interpolation}
  Borrowing notation from \cite{Fasshauer2007, Iske2004}, 
-we seek an interpolant, $\mathcal{P}_f$, of the form
+we seek an interpolant of the form
 \begin{eqnarray*}
-\mathcal{P}_f = \sum_{j=1}^{N} \phi_j(x) c_{j} = f(x) \label{eq:rbf_scattered_data_interp}
+f(x) = \sum_{j=1}^{N} \phi_j(x) c_{j}  \label{eq:rbf_scattered_data_interp}
 \end{eqnarray*}
-where $\mathcal{P}_f$ is expressed as a scalar product between the unknown coefficient weights $c_j$ and the radial basis functions $\phi_j(x)$.
+where $f(x)$ is expressed as a scalar product between the unknown coefficient weights $c_j$ and the radial basis functions $\phi_j(x)$.
 
-To obtain the unknown coefficients, $c_j$, form a linear system in terms of the trial points:
+To obtain the unknown coefficients, $c_j$, form a linear system in terms of the $N$ RBF centers:
 \begin{eqnarray*}
- \sum_{j=1}^{N} c_{j}  \phi_j(x) & = & f(x) \hskip1.5em  x = \{x_j\}_{j = 1}^{N} \\
- \barray{c}{\phi}\parray{c}{ c } & = & \parray{c}{ f }
+f(x) & = & \sum_{j=1}^{N} c_{j}  \phi_j(x)  \hskip1.5em \textrm{for\ } x = \{x_j\}_{j = 1}^{N} \\
+ \parray{c}{ f } & =&  \barray{c}{\phi}\parray{c}{ c } 
 \end{eqnarray*}
-The invertibility of this system depends on the choice of $\phi_j(x)$ and one typically chooses RBFs that are positive definite to avoid issues.
-
-%TODO: add RBF-PS clarification 
-% TODO: verify that choose has correct vars
-In many cases it is desirable to exactly reproduce functions of degree less than or equal to some order $m$ \cite{Fasshauer2007}. For RBF scattered data interpolation in one dimension, this can be achieved by adding a polynomial of order $m$ with $M =$${m+1}\choose{1}$ terms (e.g., $x^0, x^1, \cdots, x^{m}$). For $\R^2$, the terms would be: $1, x, y, xy, x^2y, xy^2, \cdots, x^{m}y^{m-1}, x^{m-1}y^{m}, x^my^m$. In $\R^D$, $M =$${m+D}\choose{D}$ \cite{Iske2004}, giving
+The invertibility of this system depends on the choice of RBF, so one typically chooses a function that is positive definite to avoid issues. It has been shown (see \cite{Fasshauer2007, Iske2004}) that some choices of RBFs (e.g. multiquadrics and thin-plate splines \cite{Hon2001}) are not positive definite and therefore there is no guarantee that the approximation is well-posed. A sufficient condition for well-posedness is that the matrix be \emph{conditionally positive definite}. In \cite{Fasshauer2007}, Fasshauer demonstrates that conditional positive definiteness is guaranteed when Equation~\ref{eqn:pde_approx} exactly reproduces functions of degree less than or equal $m$. 
+For RBF scattered data interpolation in one dimension, this can be achieved by adding a polynomial of order $m$ with $M =$${m+1}\choose{1}$ terms (e.g., $x^0, x^1, \cdots, x^{m}$). For $\R^2$, the terms would be: $1, x, y, xy, x^2y, xy^2, \cdots, x^{m}y^{m-1}, x^{m-1}y^{m}, x^my^m$. In $\R^D$, $M =$${m+D}\choose{D}$ \cite{Iske2004}, giving
 \begin{eqnarray}
-\sum_{j=1}^{N} c_{j}  \phi_j(x)  +  \sum_{l=1}^{M} d_{l} P_l(x) & = & f(x),  \hskip1.5em  P_l(x) \in \Pi^{D}_{m} \nonumber \\
+\sum_{j=1}^{N} c_{j}  \phi_j(x)  +  \sum_{l=1}^{M} d_{l} P_l(x) & = & f(x),  \hskip1.5em  P_l(x) \in \Pi^{D}_{m} \label{eq:interpolation_constraints} \\
 \left[ \begin{array}{c c} 
 	\phi & P
 	\end{array} \right] \left( \begin{array}{c}
 							c \\
 							d
 							 \end{array}
-						 \right) & = & \parray{c}{ f }
+						 \right) & = & \parray{c}{ f } \nonumber
 \label{eqn:interpolation_constraints}
 \end{eqnarray}
-where the second summation (referred to as \emph{interpolation conditions} \cite{Iske2004}) ensures the minimum degree of the interpolant.  Notice, however, that the interpolation conditions add $M$ new degrees of freedom, so we must provide $M$ 
+where the second summation (referred to as \emph{interpolation conditions} \cite{Iske2004}) ensures the minimum degree of the interpolant. Refer to Table~\ref{tbl:rbfs} for a short list of recommended RBFs and minimally required orders of $m$. This document prefers the Gaussian RBF. Notice, in Equation~\ref{eq:interpolation_constraints}, that the interpolation conditions add $M$ new degrees of freedom, so we must provide $M$ 
 additional constraints to square the system. In this case:
 $$
 \sum_{j=1}^{N} c_{j} P_l(x_j) = 0,  \hskip1.5em  l=1,..., M 
@@ -343,46 +340,44 @@ or
 P^T {c}  = {0}. 
 \label{eqn:extra_constraints}
 \end{eqnarray}
-It is now possible again to write the interpolation as a linear system using Equations~\ref{eqn:interpolation_constraints} and \ref{eqn:extra_constraints}:%as
+It is now possible again to write the interpolation problem as a linear system using Equations~\ref{eqn:interpolation_constraints} and \ref{eqn:extra_constraints}:%as
 \begin{eqnarray}
- \left[ \begin{array}{c c} 
+ \underbrace{\left[ \begin{array}{c c} 
 	\phi & P \\
 	P^T & 0
-	\end{array} \right] \left( \begin{array}{c}
+	\end{array} \right]}_{A_{\diffop{}}} \left( \begin{array}{c}
 							c \\
 							d
 							 \end{array}
 						 \right) = \left( \begin{array}{c}
-							\vec{f} \\
+							f \\
 							0
 							 \end{array}
 						 \right) \label{eq:solve_rbf_scattered_interp}
 \end{eqnarray}
 %This system then produces coefficients capable of exactly approximating data from polynomials of degree less than or equal to $m$ \cite{Fasshauer2007}. 
-Equation~\ref{eq:solve_rbf_scattered_interp}, typically a dense system except in the case of RBFs with compact support, can be solved efficiently via standard methods like LU-decomposition.
-
-After solving for the coefficients, the interpolant can be sampled at any test point $x_i$, which in general does not coincide with $\{x_j\}_{j=1}^{N}$, by returning to Equation~\ref{eq:rbf_scattered_data_interp}:
+Equation~\ref{eq:solve_rbf_scattered_interp}, typically a dense system except in the case of RBFs with compact support, can be solved efficiently via standard methods like LU-decomposition.  With the coefficients, the interpolant can be sampled at any test points, $\{x_i\}_{i=1}^{n}$, by returning to Equation~\ref{eq:rbf_scattered_data_interp}:
 \begin{eqnarray}
-u(x_i) = 
-\left[ \begin{array}{c c} 
-       \phi(x_i) &  P(x_i)
-	\end{array} \right]
-	  \left( \begin{array}{cc}  c \\ d  \end{array} \right) 
+f(x_i) & = & \sum_{j=1}^{N} c_{j}  \phi_j(x_i) +  \sum_{l=1}^{M} d_{l} P_l(x_i)  \\
+ & = & \left. \underbrace{\left[ \begin{array}{c c} 
+       \phi &  P
+	\end{array} \right]}_{B} 
+	  \left( \begin{array}{cc}  c \\ d  \end{array} \right) \ \right|_{x={x_i}}
 	\label{eqn:interpolate_x}
 \end{eqnarray}
 
 
 \subsection{Reconstructing Solutions for PDEs}
-In the next few subsections, we will generate collocation equations based on this general form: 
-\begin{eqnarray}
+In the next few subsections, we will consider collocation equations based on this general form: 
+\begin{eqnarray*}
 \diffop{u_\phi(x)} &=& f(x) \on{\Interior} \label{eqn:colloc_interior}\\ 
 \boundop{u_\phi(x)} &=& g(x) \on{\Boundary}  \label{eqn:colloc_boundary} 
-\end{eqnarray}
+\end{eqnarray*}
 where the methods presented below will apply the differential operators, $\diffop{}$ and $\boundop{}$, to different choices of $u_\phi$ and different sets of collocation points. In many applications $\diffop{}$ is chosen as a differential operator (e.g., $\pd{}{x}$, $\nabla$, $\nabla^2$) and $\boundop = I$ (i.e. identity operator for Dirichlet boundary conditions) for PDEs. For RBF scattered data interpolation, $\diffop{} = I$. There are also  applications where $\diffop{}$ is a convolution operator (see e.g., \cite{Carr2001, Carr2003}) capable of smoothing/de-noising a surface reconstructed from point clouds. 
 
 %TODO: label x_j's as TRIAL and x_is as TEST points
 %\section{Approximating the Solution}
-For all the methods presented here a linear system is generated  
+For all the methods to be presented a linear system is generated: 
 $$
 A_{\diffop{}}  \left( \begin{array}{cc}  c \\ d  \end{array} \right)  =  \left( \begin{array}{cc}  f \\ 0  \end{array} \right) 
 $$
@@ -391,31 +386,39 @@ $$
   \label{eqn:solve_coeffs}
  \end{equation}
  where matrix $A_{\diffop{}}$ depends on the choice of collocation method. 
-Once the linear system is solved, the value, $u(x_i)$, at an unknown test point, $x_i$, can be reconstructed using the coefficients with the following inner product: 
+Once the linear system is solved, the value $u(x)$ is reconstructed at the test points following Equation~\ref{eqn:interpolate_x}:
 \begin{eqnarray}
-u(x_i) = 
+u(x) & = &  \left.
 \left[ \begin{array}{c c} 
-       \phi^T(x_i) &  P^T(x_i)
-	%\phi_1(x_i) & \phi_2(x_i) & \cdots & \phi_N(x_i) & P_1(x_i) & P_2(x_i) & \cdots & P_M(x_i)
+       \phi &  P
 	\end{array} \right]
-	  \left( \begin{array}{cc}  c \\ d  \end{array} \right) 
+	  \left( \begin{array}{cc}  c \\ d  \end{array} \right)  \ \right|_{x={x_i}} \nonumber\\
+	 & = & B A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right) 
 	\label{eqn:solve_u}
 \end{eqnarray}
+Likewise, to obtain differential quantities we have: 
+\begin{eqnarray*}
+\diffop{u}(x) & = & \left.
+\left[ \begin{array}{c c} 
+       \diffop{\phi} &  \diffop{P}
+	\end{array} \right]
+	  \left( \begin{array}{cc}  c \\ d  \end{array} \right)  \ \right|_{x={x_i}} \\
+  	 & = & B_{\diffop{}} A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right).
+	\label{eqn:solve_uxx}
+\end{eqnarray*}
 
-Here we substitute $A$ for the row vector in Equation~\ref{eqn:solve_u} to get the interpolated value
-\begin{eqnarray}
-\diffop{u(x_i)} = A A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right)
-	\label{eqn:solve_rbf}
-\end{eqnarray}
-where the vector-matrix inner product $(A A^{-1}_{\diffop{}})$ is a row-vector. Since the coefficient vectors ${c}$ and ${d}$ are the same for all $x_i$, we can group the evaluation of $\diffop{u(x_i)}$ for $i=1,...,n$ as a matrix-vector multiplication where the matrix rows correspond to $(A_\diffop{} A^{-1})$ for each $x_i$. 
+%Here we substitute $B$ for test samples in Equation~\ref{eqn:solve_u} to get the reconstructed solution:
+%\begin{eqnarray}
+%u(x) = B A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right)
+%	\label{eqn:solve_rbf}
+%\end{eqnarray}
+%where the vector-matrix inner product $(A A^{-1}_{\diffop{}})$ is a row-vector. Since the coefficient vectors ${c}$ and ${d}$ are the same for all $x_i$, we can group the evaluation of $\diffop{u(x_i)}$ for $i=1,...,n$ as a matrix-vector multiplication where the matrix rows correspond to $(A_\diffop{} A^{-1})$ for each $x_i$. 
 
 
 %TODO: mention equation~\ref{eqn:solve_rbf} can be precomputed DM applied to f for collocation points in pseudo-spectral method.  
 %Relevant to the discussion of RBF-PS and computational and memory efficient global RBF methods, if $A$ contains rows corresponding to the interpolation problem can be rewritten independent of coefficients by assembling a differentiation 
 
 \subsection{PDE Methods} 
-\authnote{Fix ref eq.} 
-Returning to the PDE, we postpone the issue of  achieving polynomial precision in approximation. However, it has been shown (see \cite{Fasshauer2007, Iske2004}) that some choices of RBFs (e.g. multiquadrics and thin-plate splines \cite{Hon2001}) are not positive definite and therefore there is no guarantee that the approximation is well-posed. A sufficient condition for well-posedness is that the matrix is \emph{conditionally positive definite}. In \cite{Fasshauer2007}, Fasshauer demonstrates that conditional positive definiteness of order $m$ is guaranteed when Equation~\ref{eqn:pde_approx} includes the full polynomial part (i.e., interpolation conditions) to match the order of the RBF. 
 
 Now, since $u_{\phi}(x)$ from Equation~\ref{eqn:pde_approx} cannot (in general) satisfy the PDE everywhere, we enforce the PDE at a set of collocation points, which are  distributed over both the interior and the boundary. Again, these points do not necessarily coincide with the RBF centers, but it is convenient for this to be true in practice. 
 
@@ -467,8 +470,8 @@ as the interpolant passing through collocation points. Note $N_I$ is used here t
 Collocating (i.e., substituting Equation~\ref{eqn:fasshauer_approx} into Equations~\ref{eqn:kansa_interior}-\ref{eqn:kansa_constraints}) we get: 
 \begin{eqnarray}
 \sum_{j=1}^{N_I}c_j\diffop^2{\phi_j(x_i)} + \sum_{j=N_I+1}^{N}c_j\diffop{\boundop{\phi_j(x_i)}} + \sum_{l=1}^{M}d_l \diffop{P_l(x_i)} &=&f(x_i)  \hskip1.5em i = 1,...,n_I  \label{eqn:fasshauer_interior} \\ 
-\sum_{j=1}^{N_I}c_j\boundop{\diffop{\phi_j(x_i)}} + \sum_{j=N_I+1}^{N}c_j\boundop^2{\phi_j(x_i)} + \sum_{l=1}^{M}d_l \boundop{P_l(x_i)} &=& g(x_i)  \hskip1.5em i = n_I + 1,..., n \label{eqn:fasshauer_boundary} \\
-\sum_{j=1}^{N_I} c_j \diffop{P_l(x_j)} + \sum_{j=N_I + 1}^{N} c_j \boundop{P_l(x_j)} &=& 0 \hskip3.0em l=1,...,M \label{eqn:fasshauer_constraints} 
+\sum_{j=1}^{N_I}c_j\boundop{\diffop{\phi_j(x_i)}} + \sum_{j=N_I+1}^{N}c_j\boundop^2{\phi_j(x_i)} + \sum_{l=1}^{M}d_l \boundop{P_l(x_i)} &=& g(x_i)  \hskip1.5em i = n_I + 1,..., n \label{eqn:fasshauer_boundary} \nonumber \\
+\sum_{j=1}^{N_I} c_j \diffop{P_l(x_j)} + \sum_{j=N_I + 1}^{N} c_j \boundop{P_l(x_j)} &=& 0 \hskip3.0em l=1,...,M \label{eqn:fasshauer_constraints} \nonumber 
 \end{eqnarray}
 which is reformatted as the linear system: 
 \begin{eqnarray}
@@ -500,8 +503,8 @@ In \emph{Direct collocation} (see \cite{Larsson2003, Fedoseyev2002}, the interpo
 %\toevan{Add boundary term and specify that Kansa's method is a special case that sets boundary to 0 (i.e. Dirichlet)}  
 \begin{eqnarray}
 \sum_{j=1}^{N}c_j\diffop{\phi_j(x_i)} + \sum_{l=1}^{M}d_l \diffop{P_l(x_i)} &=&f(x_i)  \hskip1.5em i = 1,...,n  \label{eqn:direct_interior} \\ 
-\sum_{j=1}^{N}c_j\boundop{\phi_j(x_i)} + \sum_{l=1}^{M}d_l \boundop{P_l(x_i)} &=& g(x_i)  \hskip1.5em i = 1,..., n_B=n-n_I \label{eqn:direct_boundary} \\
- \sum_{j=1}^{N} c_j P_l(x_j) &=& 0 \hskip3.0em l=1,...,M \label{eqn:direct_constraints} 
+\sum_{j=1}^{N}c_j\boundop{\phi_j(x_i)} + \sum_{l=1}^{M}d_l \boundop{P_l(x_i)} &=& g(x_i)  \hskip1.5em i = 1,..., n_B=n-n_I \label{eqn:direct_boundary} \nonumber \\
+ \sum_{j=1}^{N} c_j P_l(x_j) &=& 0 \hskip3.0em l=1,...,M \label{eqn:direct_constraints} \nonumber 
 \end{eqnarray}
 Reformulating as a linear system we get: 
 \begin{eqnarray}
@@ -525,11 +528,29 @@ Reformulating as a linear system we get:
 While the final system in Equation~\ref{eqn:direct_method} is structured the same as Kansa's method (Equation~\ref{eqn:kansa_method}), %and is often confused with it (see e.g. \cite{Fasshauer2007}), 
 careful inspection of the index $i$ in Equations~\ref{eqn:kansa_interior} and \ref{eqn:direct_interior} reveals that Direct collocation produces a larger system. %Similar to Fasshauer's method, the larger system is due to additional information about influence of centers on collocation points (e.g.,  boundary on interior, interior on boundary, interior on interior, etc.). Unlike Fasshauer's method, the Direct collocation approach does not change the basis functions in the interpolant making it less obvious to readers when when a linear system represents Kansa's method or the Direct method. 
 
+
 %TODO: RBF-PS
 \subsubsection{RBF-PS}
 
-RBF-PS applies the same logic as Kansa's and Fasshauer's collocation methods. However, rather than explicitly form the interpolant coefficients prior to approximating derivatives everywhere with the smooth interpolant, RBF-PS assembles a discrete differentiation matrix to approximate derivatives only at the collocation points. 
-\authnote{here} 
+The RBF-PS method was introduced by Fasshauer \cite{Fasshauer2006, Fasshauer2007}. 
+
+The RBF-PS applies the same logic as Kansa's and Fasshauer's collocation methods to form matrix $A_{\diffop{}}$. However, RBF-PS makes a subtle change to assume the solution, $u(x)$, is only required at collocation points \cite{Fasshauer2006, Fasshauer2007}. Then, extending Equation~\ref{eqn:solve_u} for the discrete differentiation matrix, $D_\diffop{}$, gives:
+\begin{eqnarray}
+u(x) & = & \left( B A^{-1}_\diffop{} \right) \left( \begin{array}{cc}  f \\ 0  \end{array} \right) \nonumber \\
+& = & D^T_{\diffop{}} \left( \begin{array}{cc}  f \\ 0  \end{array} \right) \label{eq:rbf-ps}.
+\end{eqnarray}
+Here, $D_\diffop{}$ is independent of the function $f(x)$ and is assembled by solving the multiple RHS linear system: 
+\begin{eqnarray}
+D_{\diffop{}} & = & A^{-T}_{\diffop{}} B^T
+\end{eqnarray}
+For assembly, an LU-decomposition can be used ($O(N^3)$) in preprocessing \cite{WrightFlyerYuen10,Fasshauer2007}. Forward- and back-solves for the decomposition are applied immediately ($O(N^2)$) to complete assembly. 
+
+Since matrix $D_{\diffop{}}$ is independent of $u(x)$ and $f(x)$, it is only updated if RBF centers move---a compelling benefit for time-dependent problems with stationary nodes---otherwise the solution is given by an $O(N^2)$ matrix multiply. In contrast, global RBF collocation methods construct the LU factors of $A_{\diffop{}}$ in preprocessing, but must apply forward- and back-solves at each time-step ($O(N^2)$) to obtain weighting coefficients before the pre-multiply of $B$ (additional $O(N^2)$ step) provides the solution.
+ 
+%TODO: RBF-PS \cite{Fasshauer2006, Fasshauer2007}\cite{FasshauerZhang2007}\cite{WrightFlyerYuen10}
+
+%When the test points coincide with the trial points we have the RBF-PS method. 
+
 
 \subsection{Local Methods}
 In the methods above, globally supported RBFs were required. However, the latest trend is to use RBFs defined with some cut-off radius to enforce compact support. In some cases, authors have used the compact support to produce a single (large) sparse system for interpolation (see e.g., \cite{Wang2002, Liu2005, Correa2007, Yang2008, Lin2009}). Other approaches use compact support to produce local linear systems defined at each collocation point. Examples of this include \cite{Sarler2006, Vertnik2006} for Kansa's method, \cite{Stevens2008a, Stevens2009a, Stevens2009b} for Fasshauer's method. To our knowledge no one has considered local Direct collocation.  Also, instead of specifying a cut-off radius, some authors specify the exact stencil size (i.e., number of neighboring points to include); see e.g., \cite{Divo2007, Stevens2009b}. 
